<resources>
    <string name="app_name">CarRental</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_booking">Booking</string>
    <string name="menu_search_car">Search Car</string>
    <string name="menu_history">History</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_logout">Logout</string>

    <string name="title_map">Select Location</string>

    <string name="rent">Rent</string>
    <string name="car">Car</string>
    <string name="for_trip">-- for trip --</string>
    <string name="your_name">Your Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_enter_value">Please enter a value</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="refresh">Refresh</string>
    <string name="search_car">Search for a Car</string>
    <string name="preferred_vehicle_type">Preferred Vehicle Type</string>
    <string name="choose_car">Choose a Car</string>
    <string name="mmk">(MMK)</string>
    <string name="no_result_found">No Result Found</string>
    <string name="no_result_found_detail">We cann\'t find any item matching your search.</string>
    <string name="specification">Specifications</string>
    <string name="expert_rating">Expert rating</string>
    <string name="expert_rating_info">Rating breakdown on a scale of 1 to 5</string>
    <string name="per_day">/day</string>
    <string name="book_for_renting">Book for Renting</string>
    <string name="air_con">Air Con</string>
    <string name="window">Windows</string>
    <string name="person">Persons</string>
    <string name="bag">Bags</string>
    <string name="seat">Seats</string>
    <string name="currency_mmk">MMK</string>
    <string name="space">\u0020</string>
    <string name="enter_traveling_place">Enter your traveling place</string>
    <string name="how_many_people">How many people</string>
    <string name="pick_up">Pick up</string>
    <string name="drop_off">Drop off</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="book_now">Book Now</string>
    <string name="enter_pick_up_address">Enter a pick-up location</string>
    <string name="enter_drop_off_address">Enter a drop-off location</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="rental_day">Rental Day</string>
    <string name="amount">Amount</string>
    <string name="days">days</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="booking_date_invalid">Invalid! Pickup date is greater than drop off date.</string>
    <string name="hello">Hello</string>
    <string name="description">Description Something</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="booking_success">Booking Successful</string>
    <string name="booking_message">Your driver will contact you soon.</string>
    <string name="your_driver">Your Driver</string>
    <string name="driver_age">Driver Age</string>
    <string name="car_number">Car Number</string>
    <string name="driver_rating">Driver Rating</string>
    <string name="call_him">Call him</string>
    <string name="see_your_booking">See Your Booking</string>
    <string name="notification">Notifications</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="booking_cancel">Booking Cancel</string>
    <string name="view_driver">View Driver</string>
    <string name="start_trip">Start Trip</string>
    <string name="end_trip">End Trip</string>
    <string name="trip_place">Trip Place</string>
    <string name="car_detail">Car Detail</string>
    <string name="price_range_per_day">Price Range Per Day</string>
    <string name="sort_by">Sort By</string>
    <string name="default_sort">Default</string>
    <string name="price_low_to_high">Price - Low to High</string>
    <string name="price_high_to_low">Price - High to Low</string>
    <string name="booking_unavailable_message">Booking Unavailable! You have already booked a car.</string>

</resources>