<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter_24"
        android:iconTint="@color/white"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort_24"
        android:iconTint="@color/white"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh_24"
        android:iconTint="@color/white"
        app:showAsAction="always" />
</menu>