<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.devnweyi.carrental.viewmodel.ForgotPasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".ForgotPasswordActivity"
        android:background="@color/primary_700">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView style="@style/AppTitleRent"/>
                <TextView style="@style/AppTitleCar"/>

            </LinearLayout>

            <TextView style="@style/ForTrip"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SubTitle"
                android:text="@string/forgot_password"
                android:textColor="@color/gray"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                bind:phoneNumberMessage="@{viewModel.phoneNumberMessage}"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/EditTextFull"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="@={viewModel.phoneNumber}"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/BtnAccent200Full"
            android:text="@string/send"
            android:onClick="@{()->viewModel.onSendClicked()}"
            android:layout_marginBottom="20dp"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/BtnTransparentFull"
            android:text="@string/back"
            android:textColor="@color/light_gray"
            android:onClick="@{()->viewModel.onBackClicked()}"
            android:layout_marginBottom="20dp"></androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

</layout>